--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,8 @@ jobs:
       - image: circleci/postgres:10.3
         environment:
           CIRCLE_JOB: test
-          POSTGRES_USER: circleci
-          POSTGRES_DB: demo
+          POSTGRES_USER: webadmin
+          POSTGRES_DB: django-demo
 
       
       # Specify service dependencies here if necessary
